--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,9 @@ p {
   .row {
     margin-bottom: 30px;
   }
+}
 
+@media screen and (max-width:566px) {
   #page-top {
     width: 40px;
     height: 40px;
@@ -56,9 +58,7 @@ p {
     height: 100%;
     border-radius: 50%;
   }
-  
 }
-
 
 .submit-color {
   background-color: #17a2b8;
